@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-11-17 r73742) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-12-18 r73921) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -516,6 +516,16 @@ pckgDs> ##D
 pckgDs> ##D if(packageVersion("MASS") < "7.3.29")
 pckgDs> ##D   message("you need to update 'MASS'")
 pckgDs> ## End(No test)
+pckgDs> pu <- packageDate("utils")
+
+pckgDs> ## No test: 
+pckgDs> ##D str(pu)
+pckgDs> ## End(No test)
+pckgDs> stopifnot(identical(pu, packageDate(desc = packageDescription("utils"))),
+pckgDs+           identical(pu, packageDate("stats"))) # as "utils" and "stats" are
+
+pckgDs>                                    # both 'base R' and "Built" at same time
+pckgDs> 
 pckgDs> 
 pckgDs> 
 > 
